# gitwhisper

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
gitwhisper/: cli.py  patterns.py  report.py  scanner.py
tests/: test_scanner.py
tests/fixtures/: fake_secrets.env
